--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     background-color: #171731;
     text-align: center;
-    color: #61bde7;
+    
 }
 .h1{
     color: #61bde7;
@@ -80,4 +80,18 @@
     width: 100%;
     margin: 0 auto;
     text-align: end;
+}
+h3{
+    color: #61bde7;
+    text-align: center;
+    font-size: x-large;
+}
+.phonenumber{
+    color: #61bde7;
+}
+.email{
+    color: #61bde7;
+}
+.github{
+    color: #61bde7;
 }
